[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/gris/0.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/gris/g.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/gris/e.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/gris/t.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/gris/s.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/gris/a.png" type="Texture" id=6]
[ext_resource path="res://scripts/Stage.gd" type="Script" id=7]
[ext_resource path="res://assets/sounds/02_Stage Start.mp3" type="AudioStream" id=8]

[node name="Stage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LetterContainer" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect1" type="TextureRect" parent="LetterContainer"]
anchor_left = 1.6
anchor_top = 3.0
anchor_right = 1.8
anchor_bottom = 3.2
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect2" type="TextureRect" parent="LetterContainer"]
anchor_left = 1.8
anchor_top = 3.0
anchor_right = 2.0
anchor_bottom = 3.2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect3" type="TextureRect" parent="LetterContainer"]
anchor_left = 2.0
anchor_top = 3.0
anchor_right = 2.2
anchor_bottom = 3.2
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect4" type="TextureRect" parent="LetterContainer"]
anchor_left = 2.2
anchor_top = 3.0
anchor_right = 2.4
anchor_bottom = 3.2
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect5" type="TextureRect" parent="LetterContainer"]
anchor_left = 2.4
anchor_top = 3.0
anchor_right = 2.6
anchor_bottom = 3.2
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Number1" type="TextureRect" parent="LetterContainer"]
visible = false
anchor_left = 2.8
anchor_top = 3.0
anchor_right = 3.0
anchor_bottom = 3.2
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Number2" type="TextureRect" parent="LetterContainer"]
visible = false
anchor_left = 3.0
anchor_top = 3.0
anchor_right = 3.2
anchor_bottom = 3.2
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="StageSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[connection signal="finished" from="StageSound" to="." method="_on_StageSound_finished"]
